--- a/src/styles/CardProfile.css
+++ b/src/styles/CardProfile.css
@@ -14,6 +14,7 @@
 	border-radius: 5px;
 	background-color: #006D77;
 	color: #FFFFFF;
+	margin-left: 40px;
 	padding: 10px 18px 10px 18px;
 	text-decoration: none;
 }
@@ -32,3 +33,14 @@
 	color:#80ffdb; 
 	transition: 0.3s;
 }
+
+.profile{
+	min-width: 200px;
+	max-width: 200px;
+	
+}
+
+.card-text{
+	margin-left: 35px;
+}
+
